@@ -34,6 +34,7 @@ export(getDataFrame1)
 export(getDataFrameAtLevel)
 export(getFunsRstox)
 export(getFunsRstoxOld)
+export(getJavaMemory)
 export(getNASCDistr)
 export(getNMDdata)
 export(getNMDdata_old)
@@ -111,6 +112,7 @@ export(searchNMDCruise)
 export(setAssignments)
 export(setAssignments_old)
 export(setBaselineParameters)
+export(setJavaMemory)
 export(setMeanNASCValues_old)
 export(setNASC)
 export(setPrecisionLevel)
