@@ -2,7 +2,7 @@
 	
 	packageStartupMessage("Rstox_1.6.4
 **********
-If problems with Java Memory such as java.lang.OutOfMemoryError occurs, try increasing the Java memory by running options(java.parameters=\"-Xmx4g\"), and possibly using an even higher value than 4g
+If problems with Java Memory such as java.lang.OutOfMemoryError occurs, try increasing the Java memory by running setJavaMemory(4e9), and possibly using an even higher value than 4 gigabytes
 **********
 ", appendLF=FALSE)
 }
