@@ -448,6 +448,7 @@ getPlottingUnit <- function(unit=NULL, var="Abundance", baseunit=NULL, implement
 #'
 #' @param projectName   The name or full path of the project, a baseline object (as returned from getBaseline() or runBaseline()), og a project object (as returned from open).
 #' @param format		The file format of the saved plot, given as a string naming the function to use for saving the plot (such as bmp, jpeg, png, tiff), with \code{filename} as its first argument. Arguments fo the functions are given as \code{...}. Dimensions are defaulted to width=5000, height=3000, resolution to 500 dpi. If \code{format} has length 0, the plot is shown in the graphics window, and not saved to file.
+#' @param filetag			A character string to append to the file name (before file extension).
 #' @param ...			Parameters passed on from other functions.
 #' 
 #' @return Plot saved to file 
@@ -460,7 +461,7 @@ getPlottingUnit <- function(unit=NULL, var="Abundance", baseunit=NULL, implement
 #'
 #' @export
 #' 
-plotNASCDistribution <- function(projectName, format="png", ...){
+plotNASCDistribution <- function(projectName, format="png", filetag=NULL, ...){
 	# Get the parameters to send to the plotting function given by name in 'format':
 	lll <- list(...)
 	lll <- lll[intersect(names(lll), names(formals(png)))]
@@ -475,7 +476,7 @@ plotNASCDistribution <- function(projectName, format="png", ...){
 	}
 	#else if(length(projectEnv) && !all(c("psuNASC", "resampledNASC") %in% ls(projectEnv))){
 	if(length(projectEnv$psuNASC)==0 || length(projectEnv$resampledNASC)==0){
-		warning(paste0("At least one of the objects psuNASC and getResampledNASCDistr required to plot by the function plotNASCDistribution() are missing. These are generated by runBootstrap(, bootstrapMethod=\"AcousticTrawl\")"))
+		#warning(paste0("At least one of the objects psuNASC and getResampledNASCDistr required to plot by the function plotNASCDistribution() are missing. These are generated by runBootstrap(, bootstrapMethod=\"AcousticTrawl\")"))
 		return(NULL)
 	}
 	# Aggregate the NACS values:
@@ -487,8 +488,10 @@ plotNASCDistribution <- function(projectName, format="png", ...){
 	}
 	
 	# Define the file name and initiate the plot file:
-	filenamebase <- getProjectPaths(projectName)$RReportDir
-	filename <- file.path(filenamebase, paste("NASC_Distribution", format, sep="."))
+	#filenamebase <- getProjectPaths(projectName)$RReportDir
+	#filename <- file.path(filenamebase, paste("NASC_Distribution", format, sep="."))
+	filenamebase <- file.path(getProjectPaths(projectName)$RReportDir, paste0(c("NASC_Distribution", filetag), collapse="_"))
+	filename <- paste(filenamebase, format, sep=".")
 	
 	### if(startsWith(tolower(format), "tif")){
 	### 	filename <- file.path(filenamebase, "NASC_Distribution.tif")
@@ -549,7 +552,7 @@ plotNASCDistribution <- function(projectName, format="png", ...){
 #' 
 #' @param projectName   	The name or full path of the project, a baseline object (as returned from getBaseline() or runBaseline()), og a project object (as returned from open).
 #' @param bootstrapMethod	The bootstrap method used to generate the data.
-#' @param var				A key string indicating the variable to plot (see getPlottingUnit()$defaults$Rstox_var for available values).
+#' @param var				A key string indicating the variable to plot (see getPlottingUnit()$defaults$Rstox_var for available values). For plotAbundance_SweptAreaTotal() \code{var} is hard coded to "Count"
 #' @param unit				A unit key string indicating the unit, or alternatively a numeric value giving the scaling factor (run getPlottingUnit() to see available values).
 #' @param baseunit			The unit used in the data.
 #' @param grp1				Variable used to group results, e.g. "age", "LenGrp", "sex"
@@ -558,6 +561,8 @@ plotNASCDistribution <- function(projectName, format="png", ...){
 #' @param ylab				The label to user for the y axis, with default depending on data plotted.
 #' @param main				Main title for plot (text)
 #' @param format			The file format of the saved plot, given as a string naming the function to use for saving the plot (such as bmp, jpeg, png, tiff), with \code{filename} as its first argument. Arguments fo the functions are given as \code{...}. Dimensions are defaulted to width=5000, height=3000, , resolution to 500 dpi. If \code{format} has length 0, the plot is shown in the graphics window, and not saved to file.
+#' @param log				Character string giving the axes to apply log10() to.
+#' @param filetag			A character string to append to the file name (before file extension).
 #' @param maxcv				The maximum cv in the plot. Use Inf to indicate the maximum cv of the data.
 #' @param ...				Parameters passed on from other functions. Includes \code{numberscale}, which is kept for compability with older versions. Please use 'unit' instead. (Scale results with e.g. 1000 or 1000000).
 #' 
@@ -571,9 +576,9 @@ plotNASCDistribution <- function(projectName, format="png", ...){
 #' @export
 #' @rdname plotAbundance
 #' 
-plotAbundance <- function(projectName, bootstrapMethod="AcousticTrawl", var="Abundance", unit=NULL, baseunit=NULL, grp1="age", grp2=NULL, numberscale=1e6, plotOutput=FALSE, write=FALSE, log=NULL, ...){
+plotAbundance <- function(projectName, bootstrapMethod="AcousticTrawl", var="Abundance", unit=NULL, baseunit=NULL, grp1="age", grp2=NULL, xlab=NULL, ylab=NULL, main="", format="png", log=NULL, filetag=NULL, ...){
 	fun <- paste0("plotAbundance_", bootstrapMethod)
-	do.call(fun, list(projectName=projectName, var=var, unit=unit, baseunit=baseunit, grp1=grp1, grp2=grp2, numberscale=numberscale, plotOutput=plotOutput, write=write, log=log, ...))
+	do.call(fun, list(projectName=projectName, var=var, unit=unit, baseunit=baseunit, grp1=grp1, grp2=grp2, xlab=xlab, ylab=ylab, main=main, format=format, log=log, filetag=filetag, ...))
 }
 #'
 #' @export
@@ -581,7 +586,7 @@ plotAbundance <- function(projectName, bootstrapMethod="AcousticTrawl", var="Abu
 #' @keywords internal
 #' @rdname plotAbundance
 #'
-plotAbundance_AcousticTrawl <- plotAbundance_SweptAreaLength <- function(projectName, var="Abundance", unit=NULL, baseunit=NULL, grp1="age", grp2=NULL, xlab=NULL, ylab=NULL, main="", format="png", maxcv=1, log=NULL, ...){
+plotAbundance_AcousticTrawl <- plotAbundance_SweptAreaLength <- function(projectName, var="Abundance", unit=NULL, baseunit=NULL, grp1="age", grp2=NULL, xlab=NULL, ylab=NULL, main="", format="png", maxcv=1, log=NULL, filetag=NULL, ...){
 	
 	# Get the parameters to send to the plotting function given by name in 'format':
 	lll <- list(...)
@@ -596,7 +601,11 @@ plotAbundance_AcousticTrawl <- plotAbundance_SweptAreaLength <- function(project
 	plottingUnit <- getPlottingUnit(unit=unit, var=var, baseunit=baseunit, def.out=FALSE)
 	
 	# Process the boostrap runs:
-	temp <- reportAbundance(projectName, grp1=grp1, grp2=grp2, numberscale=plottingUnit$scale, plotOutput=TRUE)
+	temp <- reportAbundance(projectName, grp1=grp1, grp2=grp2, numberscale=plottingUnit$scale, plotOutput=TRUE, msg=FALSE)
+	if(length(temp)==0){
+		warning("No plots generated. Possibly due to mismatch between the parameter 'bootstrapMethod' in the bootstrapping and in the plotting function.")
+	}
+	
 	outList <- list(filename=NULL, data=NULL)
 	
 	for(i in seq_along(temp)){
@@ -655,7 +664,7 @@ plotAbundance_AcousticTrawl <- plotAbundance_SweptAreaLength <- function(project
 		#}
 	
 		# Get file name:
-		filenamebase <- file.path(getProjectPaths(projectName)$RReportDir, paste0(c(level, plottingUnit$var, thisgrp1, grp2), collapse="_"))
+		filenamebase <- file.path(getProjectPaths(projectName)$RReportDir, paste0(c(level, plottingUnit$var, thisgrp1, grp2, filetag), collapse="_"))
 		filename <- paste(filenamebase, format, sep=".")
 		
 		# If width and height is not given, default to width=5000, height=3000:
@@ -714,7 +723,7 @@ plotAbundance_AcousticTrawl <- plotAbundance_SweptAreaLength <- function(project
 				#}
 			
 				# Activate the plot:
-				print(pl)
+				suppressWarnings(print(pl))
 			
 				#if(startsWith(tolower(format), "tif")){
 				#	dev.copy(tiff, filename=filename, res=600, compression="lzw", height=10, width=15, units="in")
@@ -738,7 +747,7 @@ plotAbundance_AcousticTrawl <- plotAbundance_SweptAreaLength <- function(project
 #' @keywords internal
 #' @rdname plotAbundance
 #' 
-plotAbundance_SweptAreaTotal <- function(projectName, unit=NULL, baseunit=NULL, xlab=NULL, ylab=NULL, main="", format="png", log=NULL, ...){
+plotAbundance_SweptAreaTotal <- function(projectName, unit=NULL, baseunit=NULL, xlab=NULL, ylab=NULL, main="", format="png", log=NULL, filetag=NULL, ...){
 	
 	# Get the parameters to send to the plotting function given by name in 'format':
 	lll <- list(...)
@@ -768,7 +777,9 @@ plotAbundance_SweptAreaTotal <- function(projectName, unit=NULL, baseunit=NULL, 
 		xlab <- "SpecCat"
 		
 		# Get file name:
-		filenamebase <- file.path(getProjectPaths(projectName)$RReportDir, paste0(c(level, plottingUnit$var), collapse="_"))
+		#filenamebase <- file.path(getProjectPaths(projectName)$RReportDir, paste0(c(level, plottingUnit$var), collapse="_"))
+		#filename <- paste(filenamebase, format, sep=".")
+		filenamebase <- file.path(getProjectPaths(projectName)$RReportDir, paste0(c(level, plottingUnit$var, xlab, filetag), collapse="_"))
 		filename <- paste(filenamebase, format, sep=".")
 		
 		# If width and height is not given, default to width=5000, height=3000:
@@ -946,7 +957,7 @@ plotAbundance_old <- function(projectName, var="Abundance", unit=NULL, baseunit=
 				ggtitle(main)
 			
 				# Activate the plot:
-				print(pl)
+				suppressWarnings(print(pl))
 			
 				#if(startsWith(tolower(format), "tif")){
 				#	dev.copy(tiff, filename=filename, res=600, compression="lzw", height=10, width=15, units="in")
@@ -1023,12 +1034,16 @@ reportAbundance <- function(projectName, bootstrapMethod="AcousticTrawl", var="A
 #' @keywords internal
 #' @rdname reportAbundance
 #'
-reportAbundance_AcousticTrawl <- reportAbundance_SweptAreaLength <- function(projectName, var="Abundance", unit=NULL, baseunit=NULL, grp1="age", grp2=NULL, numberscale=1e6, plotOutput=FALSE, write=FALSE, ...){
+reportAbundance_AcousticTrawl <- reportAbundance_SweptAreaLength <- function(projectName, var="Abundance", unit=NULL, baseunit=NULL, grp1="age", grp2=NULL, numberscale=1e6, plotOutput=FALSE, write=FALSE, msg=TRUE, ...){
 	out <- list()
 	for(level in getRstoxDef("processLevels")){
 		out[[level]] <- reportAbundanceAtLevel(projectName, var=var, unit=unit, baseunit=baseunit, level=level, grp1=grp1, grp2=grp2, numberscale=numberscale, plotOutput=plotOutput, write=write)
 	}
-	out[sapply(out, length)>0]
+	out <- out[sapply(out, length)>0]
+	if(msg && length(out)==0){
+		warning("No reports generated. Possibly due to mismatch between the parameter 'bootstrapMethod' in the bootstrapping and in the report function.")
+	}
+	out
 }
 #'
 #' @export
@@ -1092,7 +1107,7 @@ reportAbundanceAtLevel <- function(projectName, var="Abundance", unit=NULL, base
 	# Combine all the bootstrap runs in one data table:
 	DT <- rbindlist(projectEnv[[level]]$SuperIndAbundance, idcol=TRUE)
 	if(sum(unlist(lapply(DT, length)))==0){
-		warning(paste0("The object ", level, " not present for project ", projectName))
+		#warning(paste0("The object ", level, " not present for project ", projectName))
 		return(NULL)
 	}
 	
@@ -1304,8 +1319,15 @@ getReports <- function(projectName, out="all", options="", ...){
 runFunsRstox <- function(projectName, string, out="all", options="", all.out=FALSE, drop.out=TRUE, ...){
 	# Function for extracting the parameters given in the options text string:
 	getOptionsText <- function(options){
+		# Test first using commas and semi colons:
+		options <- unlist(strsplit(options, ";", fixed=TRUE))
+		temp <- unlist(strsplit(options, ",", fixed=TRUE))
+		commaOK <- all(sapply(gregexpr("=", temp), function(x) sum(x)>0))
+		if(commaOK){
+			options <- temp
+		}
 		# Split into single parameter definitions:
-		options <- strsplit(options, ";", fixed=TRUE)[[1]]
+		#options <- strsplit(options, ";", fixed=TRUE)[[1]]
 		# Get parameter names:
 		optionsNames <- gsub("=.*", "", options)
 		optionsNames <- gsub("[[:blank:]]", "", optionsNames)
@@ -1394,6 +1416,14 @@ getFunsRstox <- function(string, out="all"){
 	}
 	
 	# Define the valid functions:
+	#funs <- list(
+	#	plots = list(
+	#		all = c("plotAbundance", "plotNASCDistribution")
+	#		),
+	#	reports = list(
+	#		all = c("reportAbundance")
+	#		)
+	#	)
 	funs <- list(
 		plots = list(
 			all = c("plotAbundance", "plotNASCDistribution")
